tentative commit: 1. Code that loads channels configuration from server 2. Code that loads schedule from server 3. Basic Channel view 4. Basic Stream view 5. Tab view - first loaded view
Need to debug channel and schedule loaders

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="player_menu_about">About</string>
     
    	<string name="player_menu_decode_audio">Decode audio</string>
+   	
+   	<string name="expandable_list_sample_action">Sample action</string>
     
 </resources>
