1. Integrate configuration.xml on server with application 2. Integrate schedule xml on server with application 3. Show configuration xml in view 4. Show schedule in view

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,5 +38,6 @@
    	<string name="player_menu_decode_audio">Decode audio</string>
    	
    	<string name="expandable_list_sample_action">Sample action</string>
+   		<string name="scheduletitle">Weekly Schedule</string>
     
 </resources>
