1. Fix caption in channel details view 2. Fix caption while playing - audio 3. Add orientation switching while playing 4. Connect the connectivity module to new playing class (Fridkin stream)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,5 +43,6 @@
    	<string name="expandable_list_sample_action">Sample action</string>
    		<string name="scheduletitle">Weekly Schedule</string>
    		<string name="programtitle">Program Title</string>
+   		<string name="description">Channel description</string>
     
 </resources>
